--- a/rootfs/etc/httpd/conf/modules_conf.conf
+++ b/rootfs/etc/httpd/conf/modules_conf.conf
@@ -225,7 +225,7 @@
         ForceLanguagePriority Prefer Fallback
 </IfModule>
 
-<IfModule php8_module>
+<IfModule php_module>
     <FilesMatch "\.ph(p3?|tml)$">
         SetHandler application/x-httpd-php
         Require all granted
