--- a/rootfs/etc/httpd/conf/modules_load.conf
+++ b/rootfs/etc/httpd/conf/modules_load.conf
@@ -20,7 +20,7 @@ LoadModule mime_module @apacheHttpd@/modules/mod_mime.so
 LoadModule mpm_itk_module @apacheHttpdmpmITK@/modules/mpm_itk.so
 LoadModule mpm_prefork_module @apacheHttpd@/modules/mod_mpm_prefork.so
 LoadModule negotiation_module @apacheHttpd@/modules/mod_negotiation.so
-LoadModule php8_module @php80@/modules/libphp8.so
+LoadModule php_module @php80@/modules/libphp.so
 LoadModule remoteip_module @apacheHttpd@/modules/mod_remoteip.so
 LoadModule rewrite_module @apacheHttpd@/modules/mod_rewrite.so
 LoadModule setenvif_module @apacheHttpd@/modules/mod_setenvif.so
