--- a/rootfs/etc/httpd/conf/httpd.conf
+++ b/rootfs/etc/httpd/conf/httpd.conf
@@ -14,7 +14,8 @@ ServerTokens Minimal
 TraceEnable Off
 HostnameLookups Off
 
-ErrorLog "| @s6PortableUtils@/bin/s6-cat"
+CustomLog "| @logger@/bin/logger -t apache2 --socket /opt/run/log" syslog
+ErrorLog "| @logger@/bin/logger -t apache2 --socket /opt/run/log"
 LogLevel info
 <Directory />
         Options FollowSymLinks
@@ -36,12 +37,13 @@ AccessFileName .htaccess
         Require all denied
 </FilesMatch>
 
-LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
-LogFormat "%a %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
-LogFormat "%a %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\" CPU_TIME: %D" common-time
 LogFormat "%a %l %u %t \"%r\" %>s %O" common
 LogFormat "%{Referer}i -> %U" referer
 LogFormat "%{User-agent}i" agent
+
+LogFormat "%{logsa}e %a %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\" CPU_TIME: %D" syslog
+ErrorLogFormat "%{logse}e [%{u}t] [%-m:%l] [pid %P] %7F: %E: [client\ %a] %M% ,\ referer\ %{Referer}i"
+LogFormat "%a %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\" CPU_TIME: %D" common-time
 
 Include @rootfs@/etc/httpd/conf/modules_load.conf
 Include @rootfs@/etc/httpd/conf/modules_conf.conf
@@ -55,7 +57,8 @@ Include @rootfs@/etc/httpd/conf/modules_conf.conf
             Require all granted
         </Directory>
         DocumentRoot @rootfs@/htdocs/
-        ErrorLog "| @s6PortableUtils@/bin/s6-cat"
+        CustomLog /dev/null common
+        ErrorLog /dev/null
         <Location /server-status>
             SetHandler server-status
             Require ip 127.0.0.1/32 172.16.0.0/16 81.95.28.24/29
